added google analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,27 @@
      <script>
      var $j = jQuery.noConflict();
      </script>
+     
+     <script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-30965893-1']);
+	  _gaq.push(['_trackPageview']);
+	
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+	
+	</script>
+     
 
 	  <meta property="og:title" content="RotoStarter" /> 
 	  <meta property="og:image" content="http://www.rotostarter.com/images/RotoStarterLogoBlue200.png" /> 
 	  <meta property="og:description" content="Free service that automatically starts your fantasy players" /> 
 	  <meta property="og:url" content="http://www.rotostarter.com">
+	  <meta property="og:type" content="website">
 	    
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
