Refresh team info, remove auto teams, added facebook meta admin tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 	  <meta property="og:description" content="Free service that automatically starts your fantasy players" /> 
 	  <meta property="og:url" content="http://www.rotostarter.com">
 	  <meta property="og:type" content="website">
+	  <meta property="fb:admins" content="731131388" />
 	    
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
