--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
   	
 	<div id="RSWrapper">
 		<div id="RSHeader" style="float:left; margin:0;">
-			<table cellpadding="0" cellspacing="0" border="0">
+			<table cellpadding="0" cellspacing="0" border="0" width="98%">
 			<tr>
 			<td>
 			&nbsp;
@@ -63,6 +63,7 @@
 			<font color="#5A4A42"> [roh-toh stahr-ter]</font>
 			noun</div>
 			<div class="HeaderTitleBrown">Free service that automatically starts your fantasy baseball players for you every morning</div>
+			<div style="float:right; margin:0;"><fb:like href="http://www.rotostarter.com" send="true" layout="button_count" width="50" show_faces="true"></fb:like></div>
 			</td>
 			
 			</tr>
@@ -74,13 +75,13 @@
 			<%-if (session[:user].nil?)-%>
 			<%= link_to "Home", "/" %> |
 
-	      	<u>How Does It Work?</u>
+	      	<%= link_to "How Does It Work?", :controller => "static", :action => "howitworks" %>
 	      	<span style="float:right;text-align: right;padding-right: 10px">
 	      	<%= link_to 'Log In', :controller => "user",:action => 'login' %>
 	      	</span>
 	      	<%-else-%>
 	      	<%= link_to "Dashboard Home", :controller => "teams", :action => "index" %> |
-			<u>How Does It Work?</u>
+			<%= link_to "How Does It Work?", :controller => "static", :action => "howitworks" %>
 			<span style="float:right;text-align: right;padding-right: 10px">
 
 			<%= link_to session[:user], :controller => "user", :action => "change_password"  %> | 
@@ -102,15 +103,14 @@
 		<br><br>
 		</div>
 		<div id="RSFooter" style="float:left; margin:0;">
-		<div class="NavHeadLeft">
+		<div class="NavHeadLeft" style="vertical-align: center;">
 		&nbsp;&nbsp;
 		
       	<%= link_to "Privacy", :controller => "static", :action => "privacy" %> |
 		<%= link_to "Terms", :controller => "static", :action => "terms" %> |
 		<%= link_to "Contact Us", :controller => "static", :action => "contact" %>
-		<span style="float:right;text-align: right;">
-<fb:like href="http://www.rotostarter.com" send="true" layout="button_count" width="50" show_faces="true"></fb:like>
-		</span>
+		
+		
 		</div>
 		</div>
 		<div id="RSEdge" style="float:left; margin:0;">
