Real Time Parser and Process, Rename 7 Day Trend, Stat Window Popup where user clicked, how it works text changes

--- a/app/views/static/howitworks.html.erb
+++ b/app/views/static/howitworks.html.erb
@@ -8,11 +8,12 @@
 	      	<li>
 	   			
 	   			<p class="DashHeaderRight">
-		      	Set up your Batter and your Pitcher preferences for each team knowing that RotoStarter will always try to maximize your lineup.<br>
+		      	Set up your Batter and your Pitcher preferences for each team.<br>
 		      	<br>
-		      	- Put players you always want to start in your "Starting Lineup".<br>
+		      	- RotoStarter will always try to maximize your lineup.<br>
+		      	- Put players you always want to start at a specific position in your "Starting Lineup".<br>
 		      	- Use your "Bench" for players you could start at multiple positions or at a flex or utility spot.<br>
-		      	- Rank or prioritize your "Bench" so RotoStarter will fill your lineup using your bench.<br>
+		      	- Rank or prioritize your "Bench" since RotoStarter will fill every position using your bench.<br>
 				<br>
 				For more on basic setup and preferences, see Recommended Settings.<br>
 				For other common questions, see the Frequently Asked Questions or FAQ.<br>
