Added new facebook and twitter buttons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,14 @@
 			<div class="HeaderTitle">RotoStarter
 			<font color="#5A4A42"> [roh-toh stahr-ter]</font>
 			noun
-			<div style="float:right; margin:0;"><fb:like href="http://www.rotostarter.com" send="true" layout="button_count" width="50" show_faces="true"></fb:like></div>	
+			<div style="float:right; margin:0;">
+				<fb:like href="http://www.facebook.com/rotostarter" send="false" layout="button_count" width="50" show_faces="true"></fb:like>
+				<BR>
+				<a href="https://twitter.com/rotostarter" class="twitter-follow-button" data-show-count="false">Follow @rotostarter</a>
+      			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      		
+				
+			</div>	
 			</div>
 			<div class="HeaderTitleBrown">Free service that automatically starts your fantasy baseball players for you every morning</div>
 			<br>
