Modified Dashboard Steps Text to Preview Tomm

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -30,8 +30,8 @@
 			<td colspan="4" class="DashHeaderRight">
 			1. Log into your Yahoo or ESPN account from RotoStarter<br>
 			2. For basic setup, set Batters to "If Game" & Starting Pitchers to "If Probable"<br>
-			3. After saving prefs, test setting tomorrow's lineup by clicking "Start Tommorow"<br>
-			4. If satisfied, relax!  RotoStarter will set your daily lineup ONCE every morning<br>
+			3. After saving prefs, test setting tomorrow's lineup by clicking "Preview Tommorow"<br>
+			4. RotoStarter will set your daily lineup ONCE every morning for activated teams<br>
 			5. You can safely modify your Yahoo or ESPN lineups for any last minute changes
 			</td>
 		</tr>
