Added meta tags, change iron worker token, if no yahoo/espn team just return in parse team method

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:fb="http://ogp.me/ns/fb#">
   <head>
-    <title>RotoStarter</title>
+    <title>RotoStarter: Automate Your Fantasy Sports Lineups</title>
 
 
     <%= stylesheet_link_tag '/stylesheets/style' %>
@@ -12,14 +12,15 @@
      <script>
      var $j = jQuery.noConflict();
      </script>
-     
+      <meta property="og:header" content="Roto Starter" />
 	  <meta property="og:title" content="RotoStarter" /> 
 	  <meta property="og:image" content="http://www.rotostarter.com/images/RotoStarterLogoBlue200.png" /> 
 	  <meta property="og:description" content="Free service that automatically starts your fantasy players" /> 
 	  <meta property="og:url" content="http://www.rotostarter.com">
 	  <meta property="og:type" content="website">
 	  <meta property="fb:admins" content="731131388" />
-	    
+	  <meta name="keywords" content="Fantasy,Football,Baseball,Basketball,Fantasy Baseball,Fantasy Football,Fantasy Basketball,Automate Lineup,Auto Start,Automatically Set Lineup,Start Lineup,Set Lineup,Set Fantasy Lineup" />
+	  <meta name="description" content="Automatically starts your lineup every morning for your fantasy sports teams: Free for fantasy baseball" />  
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
     
@@ -55,7 +56,7 @@
 			<td>	
 			&nbsp;
 			<a href="/" >
-			<img src="/images/RotoStarterLogoBlue200.png" alt="RotoStarter Logo" style="border:none;">
+			<img src="/images/RotoStarterLogoBlue200.png" alt="Roto Starter Logo" style="border:none;">
 			</a>
 			</td>
 			<td>
