Text changes on static pages, no upload on worker process, removed IP address display

--- a/app/views/static/howitworks.html.erb
+++ b/app/views/static/howitworks.html.erb
@@ -9,10 +9,10 @@
 	  <img style="width:750px;padding: 10px;" src="/images/HIW-step1.png" alt="Batter Settings">
 	  	<ul class="HIWText">
 	  		<li>Set up your Batter and your Pitcher preferences for each team knowing that RotoStarter will always try to maximize your lineup.</li>
-	  		<li>Put players you always want to start in your "Starting Lineup".<br>
+	  		<li style="margin-left:40px;">Put players you always want to start in your "Starting Lineup".<br>
 	  		</li>
-	  		<li>Use your "Bench" for players you could start at multiple positions or at a flex or utility spot.</li>
-	  		<li>Rank or prioritize your "Bench" so RotoStarter will fill your lineup using your bench.</li>
+	  		<li style="margin-left:40px;">Use your "Bench" for players you could start at multiple positions or at a flex or utility spot.</li>
+	  		<li style="margin-left:40px;">Rank or prioritize your "Bench" so RotoStarter will fill your lineup using your bench.</li>
 			<li>To preview how RotoStarter is going to set your lineup, log in and click on a team's "Batters" or "Pitchers" and then click "Preview Tomorrow".  If you don't like how the lineup is being set, adjust the team priorities.  Make sure to save your changes before previewing.</li>
 	  	</ul>
 	</div>
@@ -39,7 +39,7 @@
 	  		<li>Let's face it, baseball is a really long season.<br>
 	  		RotoStarter is a "no brainer" safety net that will make sure you're not at a disadvantage if and when life gets busy.</li>
 	  		<li>The great thing about RotoStarter is that it will maximize your lineup but still allow you the manual control and flexibility to adjust your lineup when life isn't so busy. </li>
-	  		<li>For example, RotoStarter starts Justin Verlander in your Yahoo league because he's pitching against the Yankees today.  However, you want to bench him because you don't like the matchup.  You can log into Yahoo and bench him as you normally would.  It's as easy as that.</li>
+	  		<li style="margin-left:40px;">For example, RotoStarter starts Justin Verlander in your Yahoo league because he's pitching against the Yankees today.  However, you want to bench him because you don't like the matchup.  You can log into Yahoo and bench him as you normally would.  It's as easy as that.</li>
 	  	</ul>
   	</div>	
 
