--- a/app/views/static/recsettings.html.erb
+++ b/app/views/static/recsettings.html.erb
@@ -18,10 +18,10 @@
 	      <br>
 		  <img style="width:750px;padding: 10px;" src="/images/RecSet-recbatter.png" alt="Recommended Batter Settings">
 		  	<ol class="RecSetText">
-		  		<li>If you prefer a hitter at a certain position, you should put him into your starting lineup with "If Game".</li>
-		  		<li>For all flex (CI, MI, 2B/SS, 1B/3B) or Utility slots, you should leave these slots empty so that RotoStarter will start your top ranked bench player.</li>
-		  		<li>If you are rotating multiple players in a position (platoon), you should leave the "Starting Lineup" with "Fill From Bench".  (But don't check the "Leave Empty" box.)</li>
-		  		<li>Rank your "Bench" in the order in which you need the batters to be filled into your starting roster. For example, if you need steals, you should rank any base stealers a little bit higher.</li>
+		  		<li>Set all preferred hitters into starting lineup with "If Game".</li>
+				<li>Leave all flex (CI, MI, 2B/SS, 1B/3B) or Utility slots empty with "Fill From Bench".  (Do not check the "Leave Empty" box.)</li>
+				<li>Leave all positions where you are rotating multiple players (platoon) empty with "Fill From Bench". (Do not check the "Leave Empty" box.)</li>
+				<li>Rank your "Bench" in the order in which you want RotoStarter to set your lineup. For example, if you need steals, you should rank any base stealers a little bit higher.</li>
 		  	</ol>
 	  </div>
 	  
@@ -53,7 +53,7 @@
 		  			a) With a player in "Starting Lineup" with "Always Start" (with or without game today)<br>
 		  			b) With a player in "Starting Lineup" with "If Game" (with game today)<br>
 		  			c) With the highest priority player with a game today (1 > 2 > 3 > 4 > 5)<br></li>
-		  		<li>Remember, you should probably leave a position in your "Starting Lineup" empty if you have multiple players that could start in that slot (like a Util spot).</li>
+		  		<li>Remember, you should probably leave a position in your "Starting Lineup" empty if you have multiple options for that slot (like a Util spot).</li>
 		  	</ol>
 	    </div>	
 	  
@@ -66,7 +66,8 @@
 	  	  		<li>If a player in the "Starting Lineup" does not have a game or is on the DL, RotoStarter will try to start someone on the "Bench" instead.</li>
 	  	  		<li>RotoStarter will bench anyone with a "DL" tag if he is set to "If Game" (unless he is "Always Start").<br>
 	  	  			<br>
-	  	  			"Awesome free feature eh?  Show us your support by "Liking" us on Facebook" <fb:like href="http://www.rotostarter.com" send="true" layout="button_count" width="50" show_faces="true"></fb:like></li>
+	  	  			"Awesome free feature eh?  Show us your support by "Liking" us on Facebook" 
+	  	  			<BR><BR><fb:like href="http://www.facebook.com/rotostarter" send="false" layout="button_count" width="50" show_faces="true"></fb:like></li>
 	  	  		<li>If you set a player to "Always Start", RotoStarter will always start him:<br>
 	  	  		 - Even if he does NOT have a game<br>
 	  	  		 - Even if he is on the DL<br>
