remove quotes around Awesome free feature eh

--- a/app/views/static/recsettings.html.erb
+++ b/app/views/static/recsettings.html.erb
@@ -66,7 +66,7 @@
 	  	  		<li>If a player in the "Starting Lineup" does not have a game or is on the DL, RotoStarter will try to start someone on the "Bench" instead.</li>
 	  	  		<li>RotoStarter will bench anyone with a "DL" tag if he is set to "If Game" (unless he is "Always Start").<br>
 	  	  			<br>
-	  	  			"Awesome free feature eh?  Show us your support by "Liking" us on Facebook" 
+	  	  			Awesome free feature eh?  Show us your support by "Liking" us on Facebook. 
 	  	  			<BR><BR><fb:like href="http://www.facebook.com/rotostarter" send="false" layout="button_count" width="50" show_faces="true"></fb:like></li>
 	  	  		<li>If you set a player to "Always Start", RotoStarter will always start him:<br>
 	  	  		 - Even if he does NOT have a game<br>
