Added email system error to our email addresses

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -246,7 +246,8 @@
 			<TD class="DashActiveBrown" colspan="5">
 			<div class="HomeTinyLinks">
 			If you are having issues adding and authenticating your Yahoo or ESPN ID, 
-			please open your browser, logout of all Yahoo/ESPN sessions, and log back in. Afterwards, try adding your account again.
+			please open your browser, logout of all Yahoo/ESPN sessions, and log back in.  Afterwards, try adding your account again.  
+			If you are still encountering issues, please contact us for support at <a href="mailto:support@rotostarter.com">support@rotostarter.com</a>
 			</div>
 			</TD>
 		</TR>
