Completed Football Team Management pages

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -10,10 +10,11 @@
 	<thead>
 		<tr>
 			<td colspan="3" class="DashHeaderTop" width="40%">
-			Dashboard
-			<div class="DashHeaderTopBrown">Manage Accounts and Teams</div>
+			Baseball Dashboard
+			<div class="DashHeaderTopBrown">Manage Baseball Accounts and Teams</div>
 			</td>
 			<td colspan="2" class="DashHeaderTop" align="right">
+				<img src="/images/baseball.png" alt="Baseball" height="50" width="50">
 			<div id="updating" class="DashActiveBrown" style="display:<%if (!@update)%>none<%end%>">
 			Refreshing All Teams <%= image_tag '/images/refresh-animated.gif' %>
 			</div>
