--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,7 +92,8 @@
 	      	<%= link_to 'Log In', :controller => "user",:action => 'login' %>
 	      	</span>
 	      	<%-else-%>
-	      	<%= link_to "Dashboard Home", :controller => "teams", :action => "index" %> |
+	      	<%= link_to "Football", :controller => "football_teams", :action => "index" %> |
+	      	<%= link_to "Baseball", :controller => "teams", :action => "index" %> |
 			<%= link_to "How Does It Work?", :controller => "static", :action => "howitworks" %> |
 			<%= link_to "Recommended Settings", :controller => "static", :action => "recsettings" %>
 			<span style="float:right;text-align: right;padding-right: 10px">
