--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <script src="/javascripts/window.js" type="text/javascript"></script>
     <script src="/javascripts/jquery.js" type="text/javascript"></script>
     <script src="/javascripts/jquery_ujs.js" type="text/javascript"></script>
+    <script src="/javascripts/jquery.tablednd.0.7.min.js" type="text/javascript"></script>
      <script>
      var $j = jQuery.noConflict();
      </script>
